Fix Swagger bearerAuth
